--- a/index.html
+++ b/index.html
@@ -594,8 +594,11 @@ pre code {
 </div>
 
 
-<p>For this assingment, I used college football data for the current
-2022 season.</p>
+<p>For this assignment, I used college football data for the current
+2022 season. The data can be found at <a href="https://www.sports-reference.com/cfb/years/2022-team-offense.html" class="uri">https://www.sports-reference.com/cfb/years/2022-team-offense.html</a>.
+It includes offensive averages for every NCAA football team including
+general totals, passing and rushing averages and data involving
+penalties and turnovers.</p>
 <pre class="r"><code>data = readxl::read_excel(&quot;CurrentOffense.xlsx&quot;)
 data = data[-c(1), ]
 data = data %&gt;% 
@@ -10846,6 +10849,11 @@ Colorado State
 </tbody>
 </table>
 </div>
+<p>This first table is meant to show all the data provided in the file
+in a way that is easy to read and understand. I added the above headers
+to seperate each variable into a more general topic. I also used the
+scroll box to help see each row with column headers and the hover effect
+with the paper styling.</p>
 <pre class="r"><code>q_yards = quantile(data$Off_Passing_Yards)
 data$yards_c &lt;- ifelse(
   data$Off_Passing_Yards &gt;= as.numeric(q_yards[4]),
@@ -14320,6 +14328,13 @@ Colorado State
 </tbody>
 </table>
 </div>
+<p>This second table only shows the passing averages for each team per
+game. It has the same functionality and formatting as above. However, I
+added color highlights using cell_spec() to show the teams that are in
+the top 75% quantile of either passing yards or passing touchdowns. I
+also added the tooltip function to the same columns which show hwo far
+each data point is from the mean. I think this helps show the overall
+quality of each team.</p>
 
 
 
